Adding code to query records in ES using CriteriaQuery and NativeQuery
